Fixed Scrollbar

--- a/assets/css/live-resume.css
+++ b/assets/css/live-resume.css
@@ -75,6 +75,8 @@ body {
   color: #000000;
   text-align: left;
   background-color: #f3f3f3;
+  scroll-behavior: smooth;
+  
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -10298,6 +10300,38 @@ aside {
     width: 100%;
     padding-right: 0;
   }
+}
+@media (min-width: 768px) {
+  aside {
+    min-width: 240px;
+    position: fixed; /* Keep the sidebar fixed */
+    top: 0;
+    left: 0;
+    height: 100%; /* Full height */
+    padding: 15px;
+    overflow-y: auto;
+  }
+  main {
+    margin-left: 200px;
+    flex-grow: 1;
+  }
+  /* Custom scrollbar styles */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 }
 
 main {
